# young-bit-backend

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  secret  secret.pub
backend/onboarding/: config.py  enums.py  exceptions.py  models.py  protocol.py
backend/onboarding/app/auth/: controllers.py  models.py  views.py
backend/onboarding/app/healthcheck/: controllers.py
backend/onboarding/app/news/: controllers.py  models.py  views.py
backend/onboarding/app/profile/: controllers.py
backend/onboarding/app/tasks/: controllers.py  models.py  views.py
backend/onboarding/auth/: hash.py  jwt_token.py  oauth2.py
backend/onboarding/db/: __init__.py  base.py
backend/onboarding/storage/: s3.py
bot/: .gitignore  .pylintrc  Dockerfile  docker-compose.yml  main.py  requirements.txt
bot/bot/: app.py  config.py  enums.py  keyboards.py
bot/bot/handlers/: start.py
bot/bot/requests/: common.py
